Create and test staff module

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@types/passport-local": "^1.0.35",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "mongoose": "^7.1.0",
-    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
