--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev": "concurrently \"nest start\" \"cd nextjs-client && npm run dev \"",
-    "devstart": "nodemon \"nest start\""
+    "dev": "concurrently \"nest start\" \"cd nextjs-client && npm run dev \""
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -48,6 +47,7 @@
     "dotenv": "^16.0.3",
     "mongoose": "^7.1.0",
     "next": "^13.4.3",
+    "nodemon": "^3.0.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
